# lignum-core

./: .gitignore  CMakeLists.txt  Doxyfile  MacPorts.md  PROGRAMMING_GUIDELINES.md  README.md  requirements.txt
Firmament/: CMakeLists.txt  Firmament.cc  Firmament.h  Firmament.pro  Firmament.pxd  Firmament.pyx  FirmamentWithMask.cc  Interlen.cc  Makefile  MineSet.cc  README.md  Voxel.cc  azim_incl_mask.txt  firmament.txt  firmamentplot.py  mask.txt  plotrad.py  setup.py  shatest.run  sky-dump.cc  voxellattice.cc  voxelmatrix.cc
Firmament/include/: Firmament.h  FirmamentNew.h  FirmamentWithMask.h  MineSet.h  Voxel.h  VoxelSpace.h  interlen.h  voxellattice.h  voxelmatrix.h  voxelmatrixI.h
Graphics/: CMakeLists.txt  CTexture.h  GLSettings.cc  GLSettings.h  GRAPHICS_DEPRECATED.md  Graphics.pro  LGMVisualization.cc  LGMVisualization.h  LGMVisualizationI.h  LGMVoxelVisualization.cc  LGMVoxelVisualization.h  Makefile  OpenGL.cc  OpenGL.h  OpenGLFunctor.h  OpenGLFunctorI.h  OpenGLHFiles.h  OpenGLSymbols.h  OpenGLUnix.cc  OpenGLUnix.h  OpenGLUnixI.h  OpenGLfunctions.cc  OpenGLfunctions.h  OpenGLinterface.cc  OpenGLinterface.h  OpenGLinterfaceI.h  TreeVariables.h  WrapperBase.cc  WrapperBase.h  WrapperBaseI.h  algorithms.cc  texture.cc  texture.h  tga.cc  tga.h  vaahtera1.tga
LEngine/: CMakeLists.txt  LEngine.pro  Makefile  README
LEngine/Common/: Makefile  comdef.h  dynarray.c++  dynarray.h  dynstack.c++  dynstack.h  file.c++  file.h  sarray.c++  sarray.h  xarray.h
LEngine/Generate/: Make.IRIX  Make.IRIX64  Make.Linux  Makefile  dummies.cpp  dummies.h  dump.txt  lstring.cpp  lstring.h  lstriter.cpp  lstriter.h  lsysintrfc.cpp  lystem.str  main.cpp  match.cpp  succstor.cpp  succstor.h  test.cpp
LEngine/Globals/: Lsystem.h  lglobal.h  lsysintrfc.h
LEngine/L2C/: CMakeLists.txt  L2C.pro  Make.IRIX  Make.IRIX64  Makefile  Makefile.orig  context-test.cpp  context-test.ii  cs-plant.l  file.h  hormone-down.ii  hormone-down.l  insert  insert.cc  l2c.l  l2c.y  l2c_tab.cpp  l2c_tab.h  l2c_tab.hpp  left-context.l  left-context2.l  lex_l.cpp  lsys.ii  lychnis-par.l  main.cpp  match-test.cpp  match-test.ii  match.cpp  matching.cpp  module.cpp  module.h  pinus.l  pinus2.l  production.cpp  production.h  remarks.txt  right-context.l  stdmods.h  symbodial.l  symbodial2.l  (+5 more)
LEngine/L2Lignum/: Bearberry.h  L2Lignum.cc  L2Lignum.h  LSystem.h  LSystemI.h  Lignum2Lstring.h  Lstring2Lignum.h  Makefile  Turtle.cc  Turtle.h  a-uvaursi.cc  bearberry.cc  birch.cc  ca110.cc  ca30.cc  ca90.cc  forest.cc  main.cc  pine.cc
LEngine/doc/: a-uva-ursi.tex  a-uvaursi-15-35-30.eps  a-uvaursi-15-55-30.eps  a-uvaursi-15-65-20.eps  a-uvaursi-15-65-30.eps  abstract.tex  auvaursi-sandpit-15-35d-30cm.eps  auvaursi-sandpit-15-45d-30cm.eps  auvaursi-sandpit-15-65d-30cm.eps  basic-of-l.tex  cftree.eps  discussion.tex  figure-a-uva-ursi.tex  figure-model-tree.tex  figure-pine.tex  figure-vi.tex  figureL1.tex  figureL2.tex  figures.tex  hwtree.eps  introduction.tex  language-l-lignum.tex  letter-to-editor-2.tex  letter-to-editor.tex  lsystems-elsart.tex  lsystems.tex  namespace.tex  pine8F1.eps  pine8FEM98.eps  pine8L.eps  pine8q01h230cmd10cm.eps  pine8q02h329cmd9cm.eps  pineL8.eps  structural-units.tex  surplus-sentences.txt  vigour-index.tex
LEngine/include/: LSystem.h  LSystemForRootsI.h  LSystemI.h  TreePruneI.h  Turtle.h  lengine.h  lglobal.h  lstring.h  lstringI.h  lstriter.h  lstriterI.h  lsys.h  lsysintrfc.h  lsysintrfcI.h  match.h  succstor.h  succstorI.h
LEngine/lib/: lib.pro
LEngine/lsys/: A-UvaUrsiForest.L  A-UvaUrsiSandpit.L  ErythrinaRoots.L  Make.IRIX  Make.IRIX64  Make.Linux  Makefile  bearberry.L  birch.L  ca110.L  ca30.L  ca90.L  cs-plant.L  cs-plantA.L  cs-plantB.L  cs-plantC.L  cs-plantD.L  lsys.L  lsys.cpp  lsys.i  lsysintrfc.h  pine9bp.L
LEngine/src/: CMakeLists.txt  Turtle.cc  src.pro
c++adt/: CMakeLists.txt  Doxyfile  Makefile  README.md  c++adt.pro
c++adt/doc/: CString.tex  Intro.tex  Lex.tex  PG.tex  ParametricCurve.tex  Point.tex  PositionVector.tex  RMatrix.tex  TMatrix.tex  c++adt.tex  lignumdef.tex
c++adt/include/: Bernoulli.h  Bisection.h  CString.h  ConnectionMatrix.cc  ConnectionMatrix.h  ConnectionMatrixI.h  DList.h  DListElement.h  Ellipse.h  Ellipsis.h  Gauss.h  HRMatrix.h  InvNorm.h  Kite.h  LGMGeometry.h  LGMHDF5File.h  LGMHistogram.h  Lex.h  Parallelogram.h  ParametricCurve.h  ParseCommandLine.h  Point.cc  Point.h  PointI.h  Poisson.h  Polygon.h  PositionVector.h  RMatrix.h  RectangularCuboid.h  Rotation.h  Sequence.h  Shape.h  TMatrix.cc  TMatrix.h  TMatrix3D.h  TMatrix3DI.h  TMatrixI.h  Table.cc  Table.h  TableI.h  (+6 more)
c++adt/lib/: Makefile
c++adt/src/: AlgorithmExample.cc  Bernoulli.cc  Bisection.cc  CString.cc  DList.cc  DListElement.cc  Ellipse.cc  Ellipse_in_3D.txt  Ellipsis.cc  Gauss.cc  HDF5example.cc  HRMatrix.cc  InvNorm.cc  Kite.cc  KiteExample.cc  LGMGeometry.cc  LGMHDF5File.cc  LGMHistogram.cc  Lex.cc  Parallelogram.cc  ParallelogramExample.cc  Parallelogramexample.cc  ParametricCurve.cc  ParseCommandLine.cc  Poisson.cc  Polygon.cc  PositionVector.cc  RMatrix.cc  RectangularCuboid.cc  Triangle.cc  TriangleExample.cc  TriangleExperiment.cc  Uniform.cc  berncreator.cc  cuboid.cc  hrmatrix-test.cc  mathsym.h  matrix3d.cc  normal.cc  pcurve.data  (+5 more)
stl-lignum/: CMakeLists.txt  Doxyfile  Firmament.txt  Makefile  MetaFile.txt  Radiationextinction.txt  Tree.txt  algorithms.cc  broadleaf.cc  fnb.fn  ip.fn  main.cc  pf.fn  stl-lignum.pro  tree_parameters.txt
stl-lignum/Axis/: Axis.cc  AxisFriend.cc
stl-lignum/BetulaWithFlow/: BetulaWithFlow.cc
stl-lignum/BranchingPoint/: BranchingPoint.cc  BranchingPointFriend.cc
stl-lignum/Bud/: Bud.cc  BudFriend.cc
stl-lignum/RootSystem/: RootSystem.cc
stl-lignum/Tree/: Tree.cc  TreeFriend.cc
stl-lignum/TreeCompartment/: TreeCompartment.cc  TreeCompartmentFriend.cc
stl-lignum/TreeMetaFileParser/: Error1.txt  Makefile  TreeMetaFileParser.cc  TreeSegment.txt  it
stl-lignum/TreeSegment/: BeamShading.cc  BroadLeaf.cc  BroadLeafMetabolism.cc  (+4 more)
stl-voxelspace/: CMakeLists.txt  Makefile  TASKS.md  stl-voxelspace.pro
(+215 files in other folders)
