cmake_minimum_required(VERSION 3.12)
project(LEngine)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(LENGINE_INSTALL_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
set(LENGINE_INSTALL_BIN_DIR ${CMAKE_CURRENT_LIST_DIR}/bin)
set(LENGINE_INSTALL_LIB_DIR ${CMAKE_CURRENT_LIST_DIR}/lib)

include_directories(${LENGINE_INSTALL_INCLUDE_DIR})

add_subdirectory(src)
add_subdirectory(L2C)

add_custom_target(LEngine DEPENDS L l2c)

install(TARGETS L DESTINATION ${LENGINE_INSTALL_LIB_DIR}) 
install(TARGETS l2c DESTINATION ${LENGINE_INSTALL_BIN_DIR}) 
export(TARGETS L  FILE ${CMAKE_CURRENT_LIST_DIR}/lib/L.cmake)
export(TARGETS l2c FILE ${CMAKE_CURRENT_LIST_DIR}/lib/l2c.cmake)
